--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,13 @@
         {% endblock %}
     </head>
     <body>
+
+        <nav>
+            <ul>
+                <li>Coucou</li>
+            </ul>
+        </nav>
+
         {% block body %}{% endblock %}
     </body>
 </html>
