--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -42,7 +42,7 @@
 
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm bg-white position-relative">
                     <div class="col-4 movie__poster" style="background-image: url(https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg);">
-                        <img src="images/poster-placeholder.png" class="img-fluid">
+                        <img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid">
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" class="img-fluid" -->
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
@@ -62,7 +62,7 @@
                             <i class="bi bi-star-half"></i>
                             <span class="ps-1">4.8</span>
                         </div>
-                        <a href="./show.html" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="/movies/1" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
@@ -72,7 +72,7 @@
                     <div class="col-4 movie__poster" style="background-image: url(https://m.media-amazon.com/images/M/MV5BYTRiNDQwYzAtMzVlZS00NTI5LWJjYjUtMzkwNTUzMWMxZTllXkEyXkFqcGdeQXVyNDIzMzcwNjc@._V1_SX300.jpg);">
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BYTRiNDQwYzAtMzVlZS00NTI5LWJjYjUtMzkwNTUzMWMxZTllXkEyXkFqcGdeQXVyNDIzMzcwNjc@._V1_SX300.jpg"
                             class="img-fluid" -->
-                        <img src="images/poster-placeholder.png" alt="">
+                        <img src="{{ asset('images/poster-placeholder.png') }}" alt="">
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
                         <a href="" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-x-fill"></i></a>
@@ -91,7 +91,7 @@
                             <i class="bi bi-star"></i>
                             <span class="ps-1">3.7</span>
                         </div>
-                        <a href="" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="/movies/2" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                         
@@ -119,4 +119,8 @@
 
     </div>
 
+{% endblock %}
+
+{% block title %}
+    O'Flix : Le super Titre
 {% endblock %}
