--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig'%}
 
 {% block body %}
-
-    <!-- main -->
+        <!-- main -->
 
     <div class="container bg-lighttt pt-5">
 
@@ -14,7 +13,7 @@
                     class="row g-0 borderrr rrrounded overflow-hidden flex-md-row align-items-start mb-4 shadow-smmm position-relative">
                     <div class="col-4 movie__poster img-thumbnail"
                         style="background-image: url(https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg);">
-                        <img src="images/poster-placeholder.png" class="img-fluid">
+                        <img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid">
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" class="img-fluid" -->
                     </div>
 
