--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -6,7 +6,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="./" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
                 <img src="{{ asset('favicon.png') }}" height="24" alt="Logo O'flix">
                 <span class="header-logo__title">O'flix</span>
             </a>
