--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -75,7 +75,7 @@
                             <i class="bi bi-star-half"></i>
                             <span class="ps-1">{{ movie.rating }}</span>
                         </div>
-                        <a href="/movie/{{key}}" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="{{ path('show_movie', {'id': key}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
