--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -6,7 +6,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
+            <a href="{{path('default')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
                 <img src="{{ asset('favicon.png') }}" height="24" alt="Logo O'flix">
                 <span class="header-logo__title">O'flix</span>
             </a>
@@ -17,10 +17,10 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Accueil</a>
+                        <a class="nav-link active" href="{{path('default')}}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./list.html"><i class="bi bi-film"></i> Films, séries TV</a>
+                        <a class="nav-link" href="{{path('search_movie')}}"><i class="bi bi-film"></i> Films, séries TV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./favorites.html"><i class="bi bi-bookmark"></i> Ma liste</a>
