--- a/templates/favorites/favorites.html.twig
+++ b/templates/favorites/favorites.html.twig
@@ -10,23 +10,28 @@
 
             <h2 class="text-muted fw-bold mb-4">Ma liste</h2>
 
+            {% if movie is empty %}
+                <em>vous n'avez pas encore de favoris</em>
+            {% else %}
+
+
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>A bug's life</strong> a été ajouté à votre liste de favoris.
+                <strong>{{movie.title}}</strong> a été ajouté à votre liste de favoris.
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
 
             <div class="col-6">
 
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm bg-white position-relative">
-                    <div class="col-4 movie__poster" style="background-image: url(https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg);">
+                    <div class="col-4 movie__poster" style="background-image: url({{ movie.poster }});">
                         <img src="images/poster-placeholder.png" class="img-fluid">
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" class="img-fluid" -->
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
                         <a href="" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-x-fill"></i></a>
-                        <strong class="d-inline-block mb-2 text-primary">Film</strong>
-                        <h3 class="mb-1">A Bug's Life</h3>
-                        <div class="mb-1 text-muted">93 min</div>
+                        <strong class="d-inline-block mb-2 text-primary">{{ movie.type }}</strong>
+                        <h3 class="mb-1">{{ movie.title }}</h3>
+                        <div class="mb-1 text-muted">{{ movie.duration }} min</div>
                         <a href="./show.html" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
@@ -34,7 +39,9 @@
                 </div>
             
             </div>
+            {% endif %}
 
+            {#}
             <div class="col-6">
 
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm bg-white position-relative">
@@ -76,9 +83,9 @@
                     </div>
                 </div>
             </div>
-
+        {#}
         </div>
-
+        
         <div class="col">
             <a href="" class="btn btn-danger btn-sm" onclick="return confirm('Vider votre liste de favoris ?');">Vider la liste</a>
         </div>
