--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -4,19 +4,19 @@
         <!-- main -->
     {# movieForTwig #}
         {% dump(movieForTwig) %}
-        {#
-        array:8 [▼
-            "type" => "Série"
-            "title" => "Game of Thrones"
-            "release_date" => 2011
-            "duration" => 52
-            "summary" => "Neuf familles nobles se battent pour le contrôle des terres de Westeros, tandis qu'un ancien ennemi revient..."
-            "synopsis" => "Il y a très longtemps, à une époque oubliée, une force a détruit l'équilibre des saisons. Dans un pays où l'été peut durer plusieurs années et l'hiver toute une ▶"
-            "poster" => "https://m.media-amazon.com/images/M/MV5BYTRiNDQwYzAtMzVlZS00NTI5LWJjYjUtMzkwNTUzMWMxZTllXkEyXkFqcGdeQXVyNDIzMzcwNjc@._V1_SX300.jpg"
-            "rating" => 4.7
-            ]
-        #}
+        {#App\Entity\Movie {85 ▼
+                -id: 1
+                -title: "The jungle BOOK"
+                -type: Proxies\__CG__\App\Entity\Type {2717 ▼
+                    +__isInitialized__: false
+                    -id: 1
+                    -name: null
+                    -movies: null
+                    …2
+                }
+                }#}
 
+                
     <div class="container bg-light pt-5">
 
         <div class="row mb-2">
