Mise à jour table Movie et fix affichage show

--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -16,7 +16,7 @@
                 }
                 }#}
 
-                
+
     <div class="container bg-light pt-5">
 
         <div class="row mb-2">
@@ -33,7 +33,7 @@
 
                     <div class="col-8 p-4 d-flex flex-column position-static bg-light">
                         <a href="{{path ('favorites_movies_add', {'id': movieId}) }}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
-                        <strong class="d-inline-block mb-2 text-primary">{{ movieForTwig.type }}</strong>
+                        <strong class="d-inline-block mb-2 text-primary">{{ movieForTwig.type.name }}</strong>
                         <h3 class="mb-1">{{ movieForTwig.title }}</h3>
                         <div class="mb-1 text-muted">{{ movieForTwig.duration }} min</div>
                         <p>
@@ -72,7 +72,7 @@
                             <dt class="col-sm-12">Pays</dt>
                             <dd class="col-sm-12">USA</dd>
                             <dt class="col-sm-12">Année</dt>
-                            <dd class="col-sm-12">{{ movieForTwig.release_date }}</dd>
+                            <dd class="col-sm-12">{{ movieForTwig.releaseDate | date('Y') }}</dd>
                         </dl>
 
                     </div>
