--- a/templates/favorites/favorites.html.twig
+++ b/templates/favorites/favorites.html.twig
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
                         <a href="" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-x-fill"></i></a>
-                        <strong class="d-inline-block mb-2 text-primary">{{ movie.type }}</strong>
+                        <strong class="d-inline-block mb-2 text-primary">{{ movie.type.name }}</strong>
                         <h3 class="mb-1">{{ movie.title }}</h3>
                         <div class="mb-1 text-muted">{{ movie.duration }} min</div>
                         <a href="./show.html" class="fs-1 mt-3 text-danger align-self-start">
