--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -61,7 +61,7 @@
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" class="img-fluid" -->
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
-                        <a href="{{path('favorites_movies_add', {"id": key})}}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
+                        <a href="{{path('favorites_movies_add', {"id": movie.id})}}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
                         <strong class="d-inline-block mb-2 text-primary">{{ movie.type.name }}</strong>
                         <h3 class="mb-1">{{ movie.title }}</h3>
                         <div class="mb-1 text-muted">{{ movie.duration }} min</div>
@@ -75,7 +75,7 @@
                             <i class="bi bi-star-half"></i>
                             <span class="ps-1">{{ movie.rating }}</span>
                         </div>
-                        <a href="{{ path('show_movie', {'id': key}) }}" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="{{ path('show_movie', {'id': movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
