--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -46,15 +46,90 @@
                         <p>{{ movieForTwig.synopsis }}</p>
 
                         <div class="d-flex mb-4" style="color: orange;">
+
+                        {% if movieForTwig.rating == 5 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        
+                        {% elseif movieForTwig.rating > 4 %}
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-half"></i>
+
+                        {% elseif movieForTwig.rating == 4 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star"></i>
+
+                        {% elseif movieForTwig.rating > 3 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+                        
+                        {% elseif movieForTwig.rating == 3 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+
+                        {% elseif movieForTwig.rating > 2 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+
+                        {% elseif movieForTwig.rating == 2 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                        
+                        {% elseif movieForTwig.rating > 1 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                        
+                        {% elseif movieForTwig.rating == 1 %}
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+
+                        {% elseif movieForTwig.rating > 0 %}
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                        
+                        {% else %}
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>
+
+                        {% endif %}
+        
                             <span class="ps-1">{{ movieForTwig.rating }}</span>
                         </div>
 
-                        {% if movieForTwig.type == 'Série' %}
+                        {% if movieForTwig.type.name == 'Série' %}
                             <h2>3 Saisons</h2>
                             <ul class="list-unstyled">
                                 <li><span class="badge bg-danger fs-6 mb-2">Saison 1</span><small class="ms-1">(10 épisodes)</small></li>
@@ -66,9 +141,9 @@
                         <dl class="row">
                             <dt class="col-sm-12">Avec</dt>
                             <dd class="col-sm-12">
-                            {% for actor in movieForTwig.castings %}
-                            
-                                 {{actor.creditOrder}}{{ actor.person.firstname}} {{actor.person.lastname}} ({{actor.role}})<br>
+                            {% for actor in movieForTwig.castings|sort((b, a)=> b.creditOrder <=> a.creditOrder)  %}
+                                {% dump(movieForTwig) %}
+                                {{ actor.person.firstname}} {{actor.person.lastname}} <em>({{actor.role}})</em><br>
 
                             {% endfor %}
                         
