fixture Person OK / WIP fixture casting

--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -94,7 +94,7 @@
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star"></i>
                             <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
+                            <i class="bi bi-star"></i>film",
                         
                         {% elseif movieForTwig.rating > 1 %}
                             <i class="bi bi-star-fill"></i>
