Ajout entity Season et fixture pour movie_genre

--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -129,7 +129,7 @@
                             <span class="ps-1">{{ movieForTwig.rating }}</span>
                         </div>
 
-                        {% if movieForTwig.type.name == 'Série' %}
+                        {% if movieForTwig.type.name == 'série' %}
                             <h2>3 Saisons</h2>
                             <ul class="list-unstyled">
                                 <li><span class="badge bg-danger fs-6 mb-2">Saison 1</span><small class="ms-1">(10 épisodes)</small></li>
