--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -129,9 +129,6 @@
                             
                         </div>
 
-                            <p><a href="{{path ('app_review_create', {"id": movieForTwig.id})}}" class="btn btn-primary" >Ajouter une critique</a></p>
-
-
                         {# on conditionne la partie saison que pour les série #}
                         {% if movieForTwig.type.name == 'série' %}
                             <h2>{{ movieForTwig.seasons|length }} {{ movieForTwig.seasons|length > 1 ? 'Saisons' : 'Saison' }}</h2>
@@ -168,6 +165,10 @@
                             <dt class="col-sm-12">Année</dt>
                             <dd class="col-sm-12">{{ movieForTwig.releaseDate | date('Y') }}</dd>
                         </dl>
+
+                        <div class="d-flex mb-4">
+                            <a href="{{ path('app_review_add', {'id':movieForTwig.id})}}" class="btn btn-primary">Ajouter un commentaire</a>
+                        </div>
 
                     </div>
                 </div>
