--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -56,14 +56,10 @@
                         <div class="mb-1 text-muted">{{ movie.duration }} min</div>
                         <p><small>{{ movie.summary }}</small>
                         </p>
-                        <div class="d-flex" style="color: orange;">
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-                            <span class="ps-1">{{ movie.rating }}</span>
-                        </div>
+                        
+                            {# Boucle gestion des étoiles #}
+                            {% include 'partials/_stars.html.twig' with {'ratingStars': movie.rating} %}
+                    
                         <a href="{{ path('show_movie', {'id': movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
