--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -44,90 +44,10 @@
 
                         <p>{{ movieForTwig.synopsis }}</p>
 
-                        <div class="d-flex mb-4" style="color: orange;">
+              
 
-                        {% if movieForTwig.rating == 5 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                        
-                        {% elseif movieForTwig.rating > 4 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-
-                        {% elseif movieForTwig.rating == 4 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star"></i>
-
-                        {% elseif movieForTwig.rating > 3 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-                            <i class="bi bi-star"></i>
-                        
-                        {% elseif movieForTwig.rating == 3 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-                            <i class="bi bi-star"></i>
-
-                        {% elseif movieForTwig.rating > 2 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-
-                        {% elseif movieForTwig.rating == 2 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>film",
-                        
-                        {% elseif movieForTwig.rating > 1 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-half"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                        
-                        {% elseif movieForTwig.rating == 1 %}
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-
-                        {% elseif movieForTwig.rating > 0 %}
-                            <i class="bi bi-star-half"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                        
-                        {% else %}
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-                            <i class="bi bi-star"></i>
-
-                        {% endif %}
-        
-                            <span class="ps-1">{{ movieForTwig.rating }}</span>
-                            
-                        </div>
+                        {# Boucle gestion des étoiles #}
+                            {% include 'partials/_stars.html.twig' with {'ratingStars': movieForTwig.rating} %}
 
                         {# on conditionne la partie saison que pour les série #}
                         {% if movieForTwig.type.name == 'série' %}
@@ -170,6 +90,40 @@
                             <a href="{{ path('app_review_add', {'id':movieForTwig.id})}}" class="btn btn-primary">Ajouter un commentaire</a>
                         </div>
 
+
+                        <div class="col-12 p-4 d-flex flex-column position-static bg-light">
+                            <dl class="row">
+                                <div class="col-12 p-4 d-flex flex-column position-static bg-light">
+                            <dl class="row">
+                                {# allReviewFromBDD #}
+                                {% for review in allReviewFromBDD %}
+
+                                <dt class="col-sm-12">Critiques de {{ review.username }}</dt>
+                                {# Gestion des étoiles sur Review #}
+                                {% include 'partials/_stars.html.twig' with {'ratingStars': review.rating} %}
+
+                                        <em><p class="card-text">{{ review.content}}</p>
+                                        <p class="card-subtitle mb-2 text-muted">Vu le {{ review.watchedAt|date('d-m-Y') }}<p></em>
+
+                                    <div> 
+                                {% for reaction in review.reactions %} 
+                                    <span class="badge bg-info text-dark">{{ reaction }}</span> 
+                                {% endfor %} 
+                                    </div>
+                                {% else %}
+                                    <div class="card" style="width: 18rem;">
+                                        <div class="card-body">
+                                        <p><span class="ps-1">Ce film n'a pas encore de critique<p></span>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                                
+                                
+                                </dd>
+                                
+                            </dl>
+       
+                        </div>  
                     </div>
                 </div>
 
