rangement template front

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
         {# je sépare la navigation du layout #}
         {# l'intruction include fait la même chose que le include PHP #}
         {# par convention les templates partials commencent par un _ #}
-        {% include 'partials/_nav.html.twig' %}
+        {% include 'front/partials/_nav.html.twig' %}
         
         <div class="container">
         {% block body %}{% endblock %}
