--- a/templates/front/main/home.html.twig
+++ b/templates/front/main/home.html.twig
@@ -58,7 +58,7 @@
                         </p>
                         
                             {# Boucle gestion des étoiles #}
-                            {% include 'partials/_stars.html.twig' with {'ratingStars': movie.rating} %}
+                            {% include 'front/partials/_stars.html.twig' with {'ratingStars': movie.rating} %}
                     
                         <a href="{{ path('show_movie', {'id': movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
