--- a/templates/front/main/show.html.twig
+++ b/templates/front/main/show.html.twig
@@ -47,7 +47,7 @@
               
 
                         {# Boucle gestion des étoiles #}
-                            {% include 'partials/_stars.html.twig' with {'ratingStars': movieForTwig.rating} %}
+                            {% include 'front/partials/_stars.html.twig' with {'ratingStars': movieForTwig.rating} %}
 
                         {# on conditionne la partie saison que pour les série #}
                         {% if movieForTwig.type.name == 'série' %}
@@ -100,7 +100,7 @@
 
                                 <dt class="col-sm-12">Critiques de {{ review.username }}</dt>
                                 {# Gestion des étoiles sur Review #}
-                                {% include 'partials/_stars.html.twig' with {'ratingStars': review.rating} %}
+                                {% include 'front/partials/_stars.html.twig' with {'ratingStars': review.rating} %}
 
                                         <em><p class="card-text">{{ review.content}}</p>
                                         <p class="card-subtitle mb-2 text-muted">Vu le {{ review.watchedAt|date('d-m-Y') }}<p></em>
