--- a/templates/back/movie/edit.html.twig
+++ b/templates/back/movie/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Movie{% endblock %}
 
 {% block body %}
-    <h1>Edit Movie</h1>
+    <h1>Modification des informations</h1>
 
     {{ include('back/movie/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_back_movie_index') }}">back to list</a>
+    <a href="{{ path('app_back_movie_index') }}" class="btn btn-primary">retour à la liste / Annuler les modifications</a>
 
     {{ include('back/movie/_delete_form.html.twig') }}
 {% endblock %}
