--- a/templates/back/movie/new.html.twig
+++ b/templates/back/movie/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Movie{% endblock %}
 
 {% block body %}
-    <h1>Create new Movie</h1>
+    <h1>Création d'un nouveau film / série</h1>
 
     {{ include('back/movie/_form.html.twig') }}
 
-    <a href="{{ path('app_back_movie_index') }}">back to list</a>
+    <a href="{{ path('app_back_movie_index') }}" class="btn btn-primary">retour à la liste / Annuler les modifications</a>
 {% endblock %}
