--- a/templates/back/season/_form.html.twig
+++ b/templates/back/season/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    {# <button class="btn btn-warning">{{ button_label|default('Save') }} Sauvegarder</button> #}
+    {# <button class="btn">{{ button_label|default('Save') }}</button> #}
     <button class="btn btn-warning">Sauvegarder les modifications</button>
 {{ form_end(form) }}
