exemple avec navigations (front+back) et navfull

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,11 +19,22 @@
     <title>{% block title %}O'flix{% endblock %}</title>
 </head>
     <body>
+        {# Je stocke le résultat de la comparaison, donc TRUE/FALSE #}
+        {% set isBackOffice = (app.request.attributes.get("_route") starts with "app_back_") %}
+        {% include 'partials/_fullnav.html.twig' with {'isBackOffice': isBackOffice}  %}
+        
+        {% if isBackOffice %}
+            {% include 'back/partials/_nav.html.twig' %}
 
+        {% else %}
+        
+   
         {# je sépare la navigation du layout #}
         {# l'intruction include fait la même chose que le include PHP #}
         {# par convention les templates partials commencent par un _ #}
         {% include 'front/partials/_nav.html.twig' %}
+
+        {% endif %}
         
         <div class="container">
         {% block body %}{% endblock %}
