--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -4,7 +4,7 @@ donc il n'y a pas de block, car on ne fait pas d'héritage
 c'est vraiment une inclusion du code HTML/twig de cette vue
 #}
     <!-- Nav -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark {% if isBackOffice %}bg-warning{% else %}bg-dark{% endif %}">
         <div class="container-fluid">
             <a href="{{path('default')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
                 <img src="{{ asset('favicon.png') }}" height="24" alt="Logo O'flix">
@@ -35,7 +35,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Profil</a></li>
-                            <li><a class="dropdown-item" href="{{ path('app_back_default')}}">Backoffice</a></li>
+                            <li><a class="dropdown-item" href="#">FrontOffice</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
