--- a/templates/back/main/index.html.twig
+++ b/templates/back/main/index.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 
-    <h1>Backoffice</h1>
+    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'movie' } %}
 
 {% endblock %}
