maj route favorites ok

--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -23,7 +23,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                         <a class="nav-link" href="{{path('search_movie')}}"><i class="bi bi-film"></i> Films, séries TV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{path('favorites_movies')}}"><i class="bi bi-bookmark"></i> Ma liste</a>
+                        <a class="nav-link" href="{{path('app_front_favorites_movies')}}"><i class="bi bi-bookmark"></i> Ma liste</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
