--- a/templates/front/main/show.html.twig
+++ b/templates/front/main/show.html.twig
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="col-8 p-4 d-flex flex-column position-static bg-light">
-                        <a href="{{path ('favorites_movies_add', {'id': movieId}) }}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
+                        <a href="{{path ('app_front_favorites_movies_add', {'id': movieId}) }}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
                         <strong class="d-inline-block mb-2 text-primary">{{ movieForTwig.type.name }}</strong>
                         <h3 class="mb-1">{{ movieForTwig.title }}</h3>
                         <div class="mb-1 text-muted">{{ movieForTwig.duration }} min</div>
