--- a/templates/front/main/show.html.twig
+++ b/templates/front/main/show.html.twig
@@ -87,7 +87,7 @@
                         </dl>
 
                         <div class="d-flex mb-4">
-                            <a href="{{ path('app_review_add', {'id':movieForTwig.id})}}" class="btn btn-primary">Ajouter un commentaire</a>
+                            <a href="{{ path('app_front_review_add', {'id':movieForTwig.id})}}" class="btn btn-primary">Ajouter un commentaire</a>
                         </div>
 
 
