--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -20,7 +20,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                         <a class="nav-link active" href="{{path('default')}}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{path('search_movie')}}"><i class="bi bi-film"></i> Films, séries TV</a>
+                        <a class="nav-link" href="{{path('app_front_movie_search')}}"><i class="bi bi-film"></i> Films, séries TV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{path('app_front_favorites_movies')}}"><i class="bi bi-bookmark"></i> Ma liste</a>
