--- a/templates/front/main/home.html.twig
+++ b/templates/front/main/home.html.twig
@@ -60,7 +60,7 @@
                             {# Boucle gestion des étoiles #}
                             {% include 'front/partials/_stars.html.twig' with {'ratingStars': movie.rating} %}
                     
-                        <a href="{{ path('show_movie', {'id': movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="{{ path('app_front_show_movie', {'id': movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
