--- a/templates/back/main/index.html.twig
+++ b/templates/back/main/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
 
     {% include "back/partials/_card_link.html.twig" with { 'entity' : 'movie' } %}
+    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'season' } %}
 
 {% endblock %}
