--- a/templates/back/movie/show.html.twig
+++ b/templates/back/movie/show.html.twig
@@ -46,9 +46,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_back_movie_index') }}">back to list</a>
+    <a href="{{ path('app_back_movie_index') }}" class="btn btn-primary">retour à la liste</a>
 
-    <a href="{{ path('app_back_movie_edit', {'id': movie.id}) }}">edit</a>
+    <a href="{{ path('app_back_movie_edit', {'id': movie.id}) }}" class="btn btn-warning">Modifier</a>
 
     {{ include('back/movie/_delete_form.html.twig') }}
 {% endblock %}
