crud casting ok

--- a/templates/back/main/index.html.twig
+++ b/templates/back/main/index.html.twig
@@ -6,5 +6,6 @@
 
     {% include "back/partials/_card_link.html.twig" with { 'entity' : 'movie' } %}
     {% include "back/partials/_card_link.html.twig" with { 'entity' : 'season' } %}
+    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'casting' } %}
 
 {% endblock %}
