--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
         {% include 'partials/_fullnav.html.twig' with {'isBackOffice': isBackOffice}  %}
         
         <div class="container">
+        {% include "partials/_flash.html.twig" %}
         {% block body %}{% endblock %}
         </div>
 
